--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "gig-input-slug",
+  "name": "gig-input",
   "version": "0.0.1",
-  "homepage": "https://github.com/gigigo-html5/gig-input-slug",
+  "homepage": "https://github.com/gigigo-html5/gig-input",
   "authors": [
     "Pedro Peña <pedro.jose@gigigo.com>"
   ],
