--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gig-input-slug",
+  "name": "gig-input",
   "version": "0.0.1",
   "description": "Webcomponents to manage and generate one slug. Returns value",
   "main": "gruntfile.js",
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gigigo-html5/gig-input-slug.git"
+    "url": "https://github.com/gigigo-html5/gig-input.git"
   },
   "author": "Pedro José Peña Jerez <pedro.jose@gigigo.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gigigo-html5/gig-input-slug/issues"
+    "url": "https://github.com/gigigo-html5/gig-input/issues"
   },
   "devDependencies": {
     "bower": "*",
@@ -25,5 +25,5 @@
     "grunt-vulcanize": "^1.0.0",
     "karma": "~0.8.0"
   },
-  "homepage": "https://github.com/gigigo-html5/gig-input-slug"
+  "homepage": "https://github.com/gigigo-html5/gig-input"
 }
