--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "~1.0.9"
+    "polymer": "~1.0.9",
+    "components-font-awesome": "~4.4.0"
   }
 }
