--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "polymer": "~1.0.9",
-    "components-font-awesome": "~4.4.0"
+    "components-font-awesome": "~4.4.0",
+    "pikaday": "~1.3.3",
+    "moment": "~2.10.6"
   }
 }
