--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-conventional-changelog": "0.0.12",
     "grunt-release": "~0.3.3",
     "grunt-vulcanize": "^1.0.0",
-    "karma": "~0.8.0"
+    "karma": "~0.8.0",
+    "grunt-contrib-copy": "~0.8.1"
   },
   "homepage": "https://github.com/gigigo-html5/gig-input"
 }
