--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "polymer": "~1.0.9",
     "components-font-awesome": "~4.4.0",
     "pikaday": "~1.3.3",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#~1.0.4",
+    "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#~1.0.4"
   }
 }
