--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gig-input",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "homepage": "https://github.com/gigigo-html5/gig-input",
   "authors": [
     "Pedro Peña <pedro.jose@gigigo.com>"
@@ -16,9 +16,9 @@
   "dependencies": {
     "polymer": "~1.0.9",
     "components-font-awesome": "~4.4.0",
-    "pikaday": "~1.3.3",
     "moment": "~2.10.6",
     "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#~1.0.4",
-    "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#~1.0.4"
+    "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#~1.0.4",
+    "pikaday-time": "~1.3.3"
   }
 }
