--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gig-input",
-  "version": "0.0.9",
-  "description": "Webcomponents to manage and generate one slug. Returns value",
+  "version": "0.0.10",
+  "description": "Webcomponents to manage input",
   "main": "gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +23,7 @@
     "grunt-contrib-concat": "*",
     "grunt-contrib-copy": "~0.8.1",
     "grunt-contrib-jshint": "*",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-conventional-changelog": "0.0.12",
     "grunt-release": "~0.3.3",
     "grunt-vulcanize": "^1.0.0",
