--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,12 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "~1.2.0",
     "components-font-awesome": "~4.5.0",
-    "moment": "~2.10.6",
     "iron-form-element-behavior": "PolymerElements/iron-form-element-behavior#~1.0.4",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#~1.1.2",
     "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#~1.0.4",
-    "pikaday-time": "~1.3.3"
+    "moment": "~2.10.6",
+    "pikaday-time": "~1.3.3",
+    "polymer": "~1.2.0"
   }
 }
