--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gig-input",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "homepage": "https://github.com/gigigo-html5/gig-input",
   "authors": [
     "Pedro Peña <pedro.jose@gigigo.com>"
@@ -20,6 +20,7 @@
     "iron-validatable-behavior": "PolymerElements/iron-validatable-behavior#~1.0.4",
     "moment": "~2.10.6",
     "pikaday-time": "~1.3.3",
-    "polymer": "~1.2.0"
+    "polymer": "~1.2.0",
+    "font-roboto": "~0.0.2"
   }
 }
