--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gig-input",
-  "version": "0.0.11-rc1",
+  "version": "0.0.13",
   "homepage": "https://github.com/gigigo-html5/gig-input",
   "authors": [
     "Pedro Peña <pedro.jose@gigigo.com>"
