--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,10 @@
     "pikaday-time": "~1.3.3",
     "polymer": "~1.2.0",
     "gig-icon": "~0.0.1"
+  },
+  "devDependencies": {
+    "web-component-tester": "^4.2.2",
+    "iron-test-helpers": "^1.2.3",
+    "webcomponentsjs": "^0.7.21"
   }
 }
