--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ node_js:
 before_script:
   - npm install
   - bower install
+script:
+  - xvfb-run wct
+  - "if [ \"${TRAVIS_PULL_REQUEST}\" = \"false\" ]; then wct -s 'default'; fi"
