--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: node_js
-sudo: false
+sudo: required
 node_js:
-  - 'iojs'
-  - '0.10'
-  - '0.12'
-  - '4'
-  - '5'
+  - 'stable'
 before_script:
-  - npm install
+  - npm install -g bower polylint web-component-tester
   - bower install
+  - polylint
 script:
   - xvfb-run wct
   - "if [ \"${TRAVIS_PULL_REQUEST}\" = \"false\" ]; then wct -s 'default'; fi"
