--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "update-deps": "ncu -u && ncu -m bower -u",
     "serve": "ws -p 3001",
     "lint-polymer": "polylint --root src gig-input.html gig-input-color-behavior.html gig-input-date-behavior.html gig-input-style.html",
-    "release:patch": "bower version patch && npm version patch -m \"chore(release): Bump to %s\"",
-    "release:minor": "bower version minor && npm version minor -m \"chore(release): Bump to %s\"",
-    "release:major": "bower version major && npm version major -m \"chore(release): Bump to %s\""
+    "release:patch": "npm version patch --no-git-tag-version && git add package.json && git commit -m \"chore(npm): update npm version\" && bower version patch -m \"chore(release): Bump to %s\"",
+    "release:minor": "npm version minor --no-git-tag-version && git add package.json && git commit -m \"chore(npm): update npm version\" && bower version minor -m \"chore(release): Bump to %s\"",
+    "release:major": "npm version major --no-git-tag-version && git add package.json && git commit -m \"chore(npm): update npm version\" && bower version major -m \"chore(release): Bump to %s\""
   },
   "repository": {
     "type": "git",
