--- a/bower.json
+++ b/bower.json
@@ -14,17 +14,20 @@
     "tests"
   ],
   "dependencies": {
-    "moment": "~2.13.0",
+    "moment": "~2.14.1",
     "pikaday-time": "~1.4.0",
     "gig-icon": "~0.0.1",
     "iron-overlay-behavior": "^1.8.0",
     "iron-validatable-behavior": "^1.1.1",
     "iron-form-element-behavior": "^1.0.6",
-    "polymer": "^1.5.0"
+    "polymer": "^1.6.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.2.2",
     "iron-test-helpers": "^1.2.5",
     "webcomponentsjs": "^0.7.22"
+  },
+  "resolutions": {
+    "polymer": "^1.5.0"
   }
 }
