--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm run lint-polymer",
     "release": "gulp release",
+    "postinstall": "bower install",
     "check-bower-deps": "ncu -m bower",
     "check-npm-deps": "ncu",
     "update-deps": "ncu -u && ncu -m bower -u",
